[project]
name = "decopon"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "matt", email = "matt76k@gmail.com" }
]
dependencies = [
    "pygame>=2.6.1",
    "pymunk>=6.11.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/decopon"]
